--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="mongodb+srv://username:password@cluster0.qxsqm6j.mongodb.net/bpp-production?appName=Cluster0"
+DATABASE_URL="mongodb+srv://username:password@bbp-product-cluster.mvvtpyt.mongodb.net/bbp-product-cluster?retryWrites=true&w=majority"
